--- a/CTFWebApp/Properties/launchSettings.json
+++ b/CTFWebApp/Properties/launchSettings.json
@@ -1,10 +1,11 @@
 ﻿{
   "iisSettings": {
     "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:62987",
       "sslPort": 44399
+      //"sslPort": 0
     }
   },
   "profiles": {
